[package]
name = "my"
version = "0.1.0"
authors = ["qiuzhanghua <qiuzhanghua@icloud.com>"]
edition = "2018"

[dependencies]
#pkg-config = "0.3"
mysql = "17"
r2d2_mysql = "17"
r2d2 = "0.8"
#sqlite = "0.25"
#r2d2 = "0.8"
#diesel = { version = "^1.1.0", features = ["mysql", "r2d2", "chrono"] }
#chrono = "0.4"
