[package]
name = "x"
version = "0.1.1"
authors = ["qiuzhanghua <qiuzhanghua@icloud.com>"]
edition = "2018"

[dependencies]
#sqlx = "0.2"
dotenv = "0.15"
sqlx = { version = "0.2.0", features = [ "postgres", "mysql"]}
sqlx-core = "0.2"
sqlx-macros = "0.2"
mysql = "17"
postgres = "0.17"
futures = "0.3"
async-std = { version = "1.5.0", features = [ "attributes" ] }
anyhow = "1"