[package]
name = "x"
version = "0.1.2"
authors = ["qiuzhanghua <qiuzhanghua@icloud.com>"]
edition = "2018"

[dependencies]
dotenv = "0.15"
async-native-tls = { version = "0.3", default-features = false, features = [ "runtime-tokio" ] }
mysql = "18"
postgres = "0.17"
futures = "0.3"
anyhow = "1"
tokio = {version = "0.2.16", features = ["full"] }
time = "0.2.9"
sqlx-core = {version = "0.3.3", default-features=false, features = [ "runtime-tokio" ]}

[dependencies.sqlx]
version = "0.3"
default-features = false
features = [ "runtime-tokio", "macros", "postgres", "mysql", "sqlite",  "uuid", "chrono", "bigdecimal", "json", "ipnetwork", "tls"]
